[package]
name = "multiclipboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
dialoguer = "0.10.3"
prettytable-rs = "0.10.0"
serde = {version = "1.0.154", features = ["derive"]}
serde_json = "1"